# CG-Course

./: .gitignore  LICENSE.md  README.md
Project2D/: CMakeLists.txt  Car.hpp  Circle.hpp  DemarcationLine.hpp  README.md  main.cpp
Project2D/src/: Car.cpp  Car.hpp  Circle.cpp  Circle.hpp  DemarcationLine.cpp  DemarcationLine.hpp  main.cpp
Project2D/src/utils/: AppListener.hpp  Color.cpp  Color.hpp  GlutApp.cpp  GlutApp.hpp  glUtils.cpp  glUtils.hpp
Project2D/utils/: AppListener.hpp  GlutApp.hpp  glUtils.hpp
Project2D/utils/math/: Circle.hpp  Vector.hpp
Project3D/: CMakeLists.txt  README.md
Project3D/assets/: Car.mtl  f16-scaled.mtl
Project3D/src/: ModelMaterial.hpp  ObjLoader.cpp  ObjLoader.hpp  main.cpp
Project3D/src/utils/: AppListener.hpp  Color.cpp  Color.hpp  GlutApp3D.cpp  GlutApp3D.hpp  glUtils.cpp  glUtils.hpp
Project3D/src/utils/math/: Vector.hpp
TemeLab/: AppListener.hpp  CMakeLists.txt  GlutApp.hpp  GlutApplication.hpp  IAppListener.hpp  MyUtils.hpp  tema1.cpp  tema2.cpp  tema3.cpp  tema4.cpp  tema6.cpp  tema7_1.cpp  tema7_2.cpp  tema8.cpp  tema9_2.cpp
Template/: CMakeLists.txt  MyUtils.hpp  main.cpp
tema1/: CMakeLists.txt  main.cpp
tema2/: AbstractProblem.hpp  CMakeLists.txt  Hw2Problem1.hpp  Hw2Problem2.hpp  main.cpp
