cmake_minimum_required(VERSION 3.15)
project(TemeLab)

set(CMAKE_CXX_STANDARD 14)

# Link flags for each platform (Windows and Unix)
if (WIN32)
    set(GL_LIBS -lfreeglut -lopenGL32 -lGLU32)
else ()
    set(GL_LIBS -lglut -lGL -lGLU)
endif ()

add_executable(tema1 tema1.cpp)
add_executable(tema2 tema2.cpp AppListener.hpp GlutApp.hpp)
add_executable(tema3 tema3.cpp AppListener.hpp GlutApp.hpp)
add_executable(tema4 tema4.cpp AppListener.hpp GlutApp.hpp)
add_executable(tema6 tema6.cpp)
add_executable(tema7_1 tema7_1.cpp)
add_executable(tema7_2 tema7_2.cpp)
add_executable(tema8 tema8.cpp)
add_executable(tema9 tema9/main.cpp tema9/Car.cpp tema9/Circle.cpp tema9/DemarcationLine.cpp tema9/utils/Color.cpp
        tema9/utils/GlutApp.cpp tema9/utils/glUtils.cpp)
add_executable(tema9_2 tema9_2.cpp)

target_link_libraries(tema1 ${GL_LIBS})
target_link_libraries(tema2 ${GL_LIBS})
target_link_libraries(tema3 ${GL_LIBS})
target_link_libraries(tema4 ${GL_LIBS})
target_link_libraries(tema6 ${GL_LIBS})
target_link_libraries(tema7_1 ${GL_LIBS})
target_link_libraries(tema7_2 ${GL_LIBS})
target_link_libraries(tema8 ${GL_LIBS})
target_link_libraries(tema9 ${GL_LIBS})
target_link_libraries(tema9_2 -lSOIL ${GL_LIBS})